i18n = import('i18n')
i18n.gettext('ephoto',
             languages: [
                'cs',
                'da',
                'de',
                'fr',
                'it',
                'sk',
                'sl'
             ],
             args: [
                '--keyword=_',
                '--keyword=d_:1',
                '--keyword=P_:1,2',
                '--keyword=dP_:1,2',
                '--keyword=N_',
                '--keyword=NP_:1,2',
                '--from-code=UTF-8',
                '--foreign-user'
              ])

